--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -4,7 +4,7 @@ MCS_FLAGS = -g
 
 assdir = $(libdir)
 
-ass_SCRIPTS = Mono.Debugger.dll Mono.Debugger.Backend.dll 
+ass_SCRIPTS = Mono.Debugger.dll
 
 noinst_SCRIPTS = SymbolFileReader.exe
 
@@ -16,9 +16,7 @@ INTERPRETER_SRCLIST = \
 
 LIBRARY_SRCLIST = \
 	@top_srcdir@/interfaces/*.cs			\
-	@top_srcdir@/classes/*.cs
-
-BACKEND_SRCLIST = \
+	@top_srcdir@/classes/*.cs			\
 	@top_srcdir@/backends/*.cs			\
 	@top_srcdir@/backends/classes/*.cs		\
 	@top_srcdir@/backends/ptrace/*.cs		\
@@ -33,15 +31,10 @@ LIBRARY_DEPS = \
 	-r Mono.GetOptions	\
 	-r Mono.CSharp.Debugger
 
-BACKEND_DEPS = \
-	-r Mono.Debugger.dll	\
-	-r Mono.CSharp.Debugger
-
 INTERPRETER_DEPS = \
 	-r Mono.GetOptions	\
 	-r Mono.CSharp.Debugger	\
-	-r Mono.Debugger.dll	\
-	-r Mono.Debugger.Backend.dll
+	-r Mono.Debugger.dll
 
 SYMFILE_READER_DEPS = \
 	-r Mono.GetOptions	\
@@ -50,20 +43,11 @@ SYMFILE_READER_DEPS = \
 Mono.Debugger.dll: $(LIBRARY_SRCLIST)
 	$(MCS) /target:library /out:Mono.Debugger.dll $(MCS_FLAGS) $(LIBRARY_DEPS) $(LIBRARY_SRCLIST)
 
-Mono.Debugger.Backend.dll: $(BACKEND_SRCLIST) Mono.Debugger.dll
-	$(MCS) /target:library /out:Mono.Debugger.Backend.dll $(MCS_FLAGS) $(BACKEND_DEPS) $(BACKEND_SRCLIST)
-
-Interpreter.exe: $(INTERPRETER_SRCLIST) Mono.Debugger.dll Mono.Debugger.Backend.dll
+Interpreter.exe: $(INTERPRETER_SRCLIST) Mono.Debugger.dll
 	$(MCS) -o Interpreter.exe $(INTERPRETER_DEPS) $(INTERPRETER_SRCLIST) $(MCS_FLAGS)
 
 SymbolFileReader.exe: $(SYMFILE_READER_SRCLIST)
 	$(MCS) -o SymbolFileReader.exe $(SYMFILE_READER_DEPS) $(SYMFILE_READER_SRCLIST) $(MCS_FLAGS)
-
-Debugger.exe.config: Debugger.exe.config.in Makefile
-	sed -e 's,\@MONO\@,${libexecdir}/mono-debugger-mini-wrapper,g' \
-		-e 's,\@PATH\@,${PATH},g' \
-		-e 's,\@LD_LIBRARY_PATH\@,${libdir}:${LD_LIBRARY_PATH},g' \
-		< $< > tmp-t && mv tmp-t $@
 
 Interpreter.exe.config: Interpreter.exe.config.in Makefile
 	sed -e 's,\@MONO\@,${libexecdir}/mono-debugger-mini-wrapper,g' \
@@ -72,18 +56,15 @@ Interpreter.exe.config: Interpreter.exe.config.in Makefile
 		< $< > tmp-t && mv tmp-t $@
 
 configdir = $(bindir)
-config_DATA = Debugger.exe.config Interpreter.exe.config
+config_DATA = Interpreter.exe.config
 
 CLEANFILES = *.exe *.dll
 
 EXTRA_DIST = \
-	mdb.in mono-debug.in SymbolFileReader.cs \
-	Debugger.exe.config.in Interpreter.exe.config.in
+	mdb.in SymbolFileReader.cs \
+	Interpreter.exe.config.in
 
 mdb: mdb.in
 	sed -e 's^\@bindir\@^$(bindir)^g' < $(srcdir)/mdb.in > mdb.tmp \
 	&& mv mdb.tmp mdb 
 
-mono-debug: mono-debug.in
-	sed -e 's^\@bindir\@^$(bindir)^g' < $(srcdir)/mono-debug.in > mono-debug.tmp \
-	&& mv mono-debug.tmp mono-debug 
