* configure.in: Add missing files
svn path=/trunk/debugger/; revision=22425

--- a/configure.in
+++ b/configure.in
@@ -227,4 +227,6 @@ arch/bfd/include/coff/Makefile
 arch/bfd/include/elf/Makefile
 test/Makefile
 doc/Makefile
+lib/mono-debug
+lib/Interpreter.exe.config
 ])
