2004-03-02  Mike Kestner  <mkestner@ximian.com>
	* configure.in : expand pc.in
	* Makefile.am : install pc and dist pc.in
	* mono-debugger.pc.in: new

svn path=/trunk/debugger/; revision=23635

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,7 @@
 SUBDIRS = interfaces classes glue arch backends frontends lib wrapper test doc
 
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = mono-debugger.pc
+
 EXTRA_DIST = RELEASE-NOTES-0.1.0.txt RELEASE-NOTES-0.2.0.txt RELEASE-NOTES-0.2.2.txt \
-	     RELEASE-NOTES-0.3.txt README.FreeBSD README.build
+	     RELEASE-NOTES-0.3.txt README.FreeBSD README.build mono-debugger.pc.in
