--- a/configure.in
+++ b/configure.in
@@ -202,6 +202,7 @@ AC_CHECK_FUNCS(fcntl getpagesize setitimer sysconf fdopen getuid getgid)
 
 AC_OUTPUT([
 Makefile
+mono-debugger.pc
 interfaces/Makefile
 classes/Makefile
 glue/Makefile
