2004-03-03  Martin Baulig  <martin@ximian.com>
	* lib/: Removed.

svn path=/trunk/debugger/; revision=23656

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = interfaces classes glue arch backends frontends lib wrapper test doc
+SUBDIRS = interfaces classes glue arch backends frontends wrapper test doc
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = mono-debugger.pc
