--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -1,4 +1,4 @@
-libexec_PROGRAMS = mono-debugger-mini-wrapper
+lib_PROGRAMS = mono-debugger-mini-wrapper
 
 INCLUDES = \
 	-DG_LOG_DOMAIN=\"MonoDebuggerJitWrapper\" \
