2004-03-04  Martin Baulig  <martin@ximian.com>
	* backends/Debugger.cs (DebuggerBackend.Initialize): Renamed this
	to DoInitialize() and added a static Initialize().

	* backends/SingleSteppingEngine.cs (Kill): New public method.

	* backends/server/i386-linux-ptrace.c: Protect do_wait() by a mutex.
	(_mono_debugger_server_setup_inferior): Wait until the target
	actually stopped.

svn path=/trunk/debugger/; revision=23685

--- a/frontends/scripting/Makefile.am
+++ b/frontends/scripting/Makefile.am
@@ -1,11 +1,9 @@
 noinst_DATA = Parser.cs
 
-if HAVE_JAY
+JAY = $(top_srcdir)/../mcs/jay/jay
 
 Parser.cs: Parser.jay
 	$(JAY) -ctv < skeleton Parser.jay > Parser.tmp && mv -f Parser.tmp Parser.cs
-
-endif
 
 MAINTAINERCLEANFILES = Parser.cs y.output
 
