--- a/classes/Makefile.am
+++ b/classes/Makefile.am
@@ -1,1 +1,8 @@
-EXTRA_DIST = @srcdir@/*.cs
+EXTRA_DIST = AbsoluteTargetLocation.cs AddressDomain.cs AssemblerMethod.cs Backtrace.cs Breakpoint.cs \
+	BreakpointHandle.cs InternalError.cs MethodBase.cs MethodSource.cs Module.cs ModuleManager.cs \
+	ObjectCache.cs ObjectContainer.cs ProcessStart.cs RelativeTargetLocation.cs Report.cs \
+	SimpleBreakpoint.cs SimpleSymbolTableCollection.cs SourceAddress.cs SourceBuffer.cs SourceFileFactory.cs \
+	SourceInfo.cs SourceLocation.cs StackFrame.cs SymbolTableCollection.cs SymbolTable.cs SymbolTableException.cs \
+	SymbolTableManager.cs TargetAddress.cs TargetBinaryReader.cs TargetBinaryWriter.cs TargetEvent.cs \
+	TargetException.cs TargetInvocationException.cs TargetLocation.cs TargetMemoryArea.cs TargetMemoryException.cs \
+	ThreadGroup.cs
