--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -7,7 +7,11 @@ debugger = '$(MONO) ../lib/Interpreter.exe'
 
 test_FILES = TestManagedTypes.exe TestLexicalScopes.exe
 
-EXTRA_DIST = @srcdir@/*.cs runtest.pl
+EXTRA_DIST = runtest.pl A.cs B.cs C.cs ContextMenu.cs CrashMe.cs D.cs E.cs \
+	F.cs Foo.cs GC.cs G.cs H.cs Hello.cs I.cs J.cs K.cs L.cs M.cs \
+	Monkey.cs MultiThread.cs N.cs Property.cs Simple.cs TestAppDomain.cs Test.cs \
+	TestInternCall.cs TestLexicalScopes.cs TestLine.cs TestManagedTypes.cs \
+	TestSourceView.cs
 
 %.exe:%.cs
 	$(MCS) $(MCS_FLAGS) -o $@ $<
