--- a/backends/mono-csharp/Makefile.am
+++ b/backends/mono-csharp/Makefile.am
@@ -1,1 +1,6 @@
-EXTRA_DIST = @srcdir@/*.cs
+EXTRA_DIST = CSharpMethod.cs Heap.cs MonoArrayObject.cs MonoArrayType.cs MonoClass.cs MonoClassObject.cs \
+	MonoCSharpLanguageBackend.cs MonoEnumObject.cs MonoEnumType.cs MonoFunctionObject.cs \
+	MonoFunctionType.cs MonoFundamentalObjectBase.cs MonoFundamentalObject.cs MonoFundamentalType.cs \
+	MonoObject.cs MonoObjectObject.cs MonoObjectType.cs MonoOpaqueObject.cs MonoOpaqueType.cs \
+	MonoPointerObject.cs MonoPointerType.cs MonoStringObject.cs MonoStringType.cs MonoType.cs \
+	MonoVariable.cs
