--- a/backends/native/Makefile.am
+++ b/backends/native/Makefile.am
@@ -1,1 +1,4 @@
-EXTRA_DIST = @srcdir@/*.cs
+EXTRA_DIST = NativeFunctionObject.cs NativeFunctionType.cs NativeFundamentalObject.cs NativeFundamentalType.cs \
+	NativeLanguage.cs NativeObject.cs NativeOpaqueObject.cs NativeOpaqueType.cs NativePointerObject.cs \
+	NativePointerType.cs NativeStringObject.cs NativeStringType.cs NativeStructObject.cs NativeStructType.cs \
+	NativeType.cs
