--- a/backends/server/Makefile.am
+++ b/backends/server/Makefile.am
@@ -13,7 +13,9 @@ EXTRA_libmonodebuggerserver_la_SOURCES = \
 
 libmonodebuggerserver_la_SOURCES = \
 	i386-arch.c		\
+	i386-arch.h		\
 	i386-ptrace.c		\
+	i386-ptrace.h		\
 	server.h		\
 	breakpoints.c		\
 	breakpoints.h		\
