Ignore this for the moment, this is just a little toy of mine ;-)
svn path=/trunk/debugger/; revision=25262

--- a/backends/server/Makefile.am
+++ b/backends/server/Makefile.am
@@ -11,15 +11,40 @@ EXTRA_libmonodebuggerserver_la_SOURCES = \
 	i386-arch.h			\
 	i386-ptrace.c
 
+if MARTIN_HACKS
+martin_hack_srclist = \
+	remote-client.c		\
+	Debugger-stubs.c	\
+	Debugger-common.c
+
+martin_hack_progs = remote-server
+
+Debugger-stubs.c Debugger-common.c Debugger-skels.c Debugger.h : Debugger.idl
+	orbit-idl-2 $(srcdir)/Debugger.idl
+else
+martin_hack_srclist =
+martin_hack_progs =
+endif
+
 libmonodebuggerserver_la_SOURCES = \
-	i386-arch.c		\
 	i386-arch.h		\
 	i386-ptrace.c		\
 	i386-ptrace.h		\
 	server.h		\
+	library.c		\
+	$(martin_hack_srclist)	\
 	breakpoints.c		\
-	breakpoints.h		\
-	#
+	breakpoints.h
+
+noinst_PROGRAMS = \
+	$(martin_hack_progs)
+
+remote_server_SOURCES = \
+	remote-server.c		\
+	debugger-srv.c		\
+	Debugger-skels.c
+
+remote_server_LDADD = @SERVER_DEPENDENCIES_LIBS@ libmonodebuggerserver.la
 
 libmonodebuggerserver_la_LIBADD = @SERVER_DEPENDENCIES_LIBS@
 libmonodebuggerserver_la_LDFLAGS = -no-undefined -module -export-dynamic -shared
