Conditionally enable this stuff in the makefiles; it isn't picked up by default, so it won't affect the normal build.
svn path=/trunk/debugger/; revision=25292

--- a/arch/opcodes/Makefile.am
+++ b/arch/opcodes/Makefile.am
@@ -1,8 +1,16 @@
 noinst_LTLIBRARIES = libopcodes.la
 
-INCLUDES = -D_GNU_SOURCE -DARCH_i386 -I$(srcdir)/../bfd -I$(srcdir)/../bfd/include
+if BFD_TARGET_POWERPC
+arch_cflags = -DARCH_powerpc -DARCH_i386
+arch_sources = i386-dis.c ppc-dis.c ppc-opc.c
+else
+arch_cflags = -DARCH_i386
+arch_sources = i386-dis.c
+endif
 
-libopcodes_la_SOURCES =  dis-buf.c disassemble.c i386-dis.c
+INCLUDES = -D_GNU_SOURCE $(arch_cflags) -I$(srcdir)/../bfd -I$(srcdir)/../bfd/include
+
+libopcodes_la_SOURCES =  dis-buf.c disassemble.c $(arch_sources)
 libopcodes_la_LDFLAGS = -export-dynamic
 
 EXTRA_DIST = opintl.h sysdep.h
