--- a/arch/bfd/include/Makefile.am
+++ b/arch/bfd/include/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = aout coff elf
+SUBDIRS = aout coff elf opcode
 
 EXTRA_DIST = ansidecl.h bfdlink.h dis-asm.h filenames.h fnmatch.h fopen-same.h hashtab.h \
 	libiberty.h objalloc.h safe-ctype.h symcat.h
