2004-04-14  Martin Baulig  <martin@ximian.com>
	* frontends/scripting/Engine.cs (Engine): New public class.

	* frontends/scripting/Generator.cs: Renamed to Engine.cs

svn path=/trunk/debugger/; revision=25490

--- a/frontends/scripting/Makefile.am
+++ b/frontends/scripting/Makefile.am
@@ -1,12 +1,3 @@
-noinst_DATA = Parser.cs
-
-JAY = $(top_srcdir)/../mcs/jay/jay
-
-Parser.cs: Parser.jay
-	$(JAY) -ctv < skeleton Parser.jay > Parser.tmp && mv -f Parser.tmp Parser.cs
-
-MAINTAINERCLEANFILES = Parser.cs y.output
-
-EXTRA_DIST = Parser.cs Parser.jay skeleton AssertCommand.cs Command.cs Expression.cs \
+EXTRA_DIST = Parser.jay skeleton AssertCommand.cs Command.cs Expression.cs \
 	Generator.cs MyTextReader.cs Parser.cs ScriptingContext.cs Tokenizer.cs \
 	VariableExpression.cs
