--- a/frontends/scripting/Makefile.am
+++ b/frontends/scripting/Makefile.am
@@ -1,3 +1,2 @@
-EXTRA_DIST = Parser.jay skeleton AssertCommand.cs Command.cs Expression.cs \
-	Generator.cs MyTextReader.cs Parser.cs ScriptingContext.cs Tokenizer.cs \
-	VariableExpression.cs
+EXTRA_DIST = Command.cs Expression.cs Interpreter.cs MyTextReader.cs \
+	ScriptingContext.cs Session.cs Style.cs
