--- a/backends/classes/Makefile.am
+++ b/backends/classes/Makefile.am
@@ -1,1 +1,2 @@
-EXTRA_DIST = MonoVariableLocation.cs Semaphore.cs TargetReader.cs Utils.cs
+EXTRA_DIST = MonoVariableLocation.cs Semaphore.cs TargetReader.cs Utils.cs \
+	BitfieldTargetLocation.cs
