--- a/interfaces/Makefile.am
+++ b/interfaces/Makefile.am
@@ -2,5 +2,5 @@ EXTRA_DIST = IArchitecture.cs IDisassembler.cs ILanguage.cs IMethod.cs ISourceBu
 	ITargetArrayObject.cs ITargetArrayType.cs ITargetClassObject.cs ITargetClassType.cs ITargetFunctionObject.cs \
 	ITargetFunctionType.cs ITargetFundamentalObject.cs ITargetFundamentalType.cs ITargetMemoryAccess.cs \
 	ITargetNotification.cs ITargetObject.cs ITargetPointerObject.cs ITargetPointerType.cs ITargetStructObject.cs \
-	ITargetStructType.cs ITargetType.cs IVariable.cs TargetObjectKind.cs
+	ITargetStructType.cs ITargetType.cs IVariable.cs TargetObjectKind.cs ITargetTypeAlias.cs
 
