More build stuff.
svn path=/trunk/debugger/; revision=26255

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -10,7 +10,8 @@ noinst_SCRIPTS = \
 noinst_PROGRAMS = testnativetypes module libfoo.so
 
 EXTRA_DIST = \
-	TestManagedTypes.cs TestAssembly.cs TestModule.cs TestNamespace.cs
+	TestManagedTypes.cs TestAssembly.cs TestModule.cs TestNamespace.cs \
+	mdb.exp
 
 testnativetypes_SOURCES = testnativetypes.c
 
