2004-06-02  Martin Baulig  <martin@ximian.com>
	Released version 0.8 "Wrightsville Beach" of the Mono Debugger :-)

svn path=/trunk/debugger/; revision=28658

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,4 +5,4 @@ pkgconfig_DATA = mono-debugger.pc
 
 EXTRA_DIST = RELEASE-NOTES-0.1.0.txt RELEASE-NOTES-0.2.0.txt RELEASE-NOTES-0.2.2.txt \
 	     RELEASE-NOTES-0.3.txt README.FreeBSD README.build mono-debugger.pc.in \
-	     RELEASE-NOTES-0.6.txt RELEASE-NOTES-0.7.txt
+	     RELEASE-NOTES-0.6.txt RELEASE-NOTES-0.7.txt RELEASE-NOTES-0.8.txt
