2004-06-03  Martin Baulig  <martin@ximian.com>
	* test/TestInvocation.cs: New file.

	* test/mono-debugger.tests/TestInvocation.exp: New test.

svn path=/trunk/debugger/; revision=28756

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,13 +5,14 @@ AUTOMAKE_OPTIONS = dejagnu
 MCS_FLAGS=-g
 
 noinst_SCRIPTS = \
-	TestManagedTypes.exe TestAssembly.exe TestNamespace.exe TestModule.dll
+	TestManagedTypes.exe TestAssembly.exe TestNamespace.exe TestModule.dll \
+	TestInvocation.exe
 
 noinst_PROGRAMS = testnativetypes module libfoo.so
 
 EXTRA_DIST = \
 	TestManagedTypes.cs TestAssembly.cs TestModule.cs TestNamespace.cs \
-	mdb.exp
+	TestInvocation.cs mdb.exp
 
 testnativetypes_SOURCES = testnativetypes.c
 
