2004-06-16  Martin Baulig  <martin@ximian.com>
	* classes/ProcessStart.cs: Added --debug-flags command line
	options to set Report.CurrentDebugFlags.

	* wrapper/Makefile.am: Reference the newly built Mono.Debugger.dll
	and not the one from the gac.

svn path=/trunk/debugger/; revision=29701

--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -57,7 +57,7 @@ LIBRARY_DEPS = \
 MDB_DEPS = \
 	-r Mono.GetOptions	\
 	-r Mono.CSharp.Debugger	\
-	-r Mono.Debugger.dll
+	-r ./Mono.Debugger.dll
 
 Mono.Debugger.dll: $(LIBRARY_SRCLIST)
 	$(MCS) /target:library /out:Mono.Debugger.dll $(MCS_FLAGS) -keyfile:@top_srcdir@/wrapper/mono.snk $(LIBRARY_DEPS) $(LIBRARY_SRCLIST)
